public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/2287/source/compile
source.c:2:2: error: invalid preprocessing directive #inlude
 #inlude <string.h>
  ^
